test/fails/bad_casts/core1.lgl
tag a is vec<2>;
tag b is a;
tag c is vec<2>;
tag cnc is c;

void main() {
    canon b->c __bc = [[1., 2.], [2., 1.]];
    b bvec = [1., 0.];
    cnc fail = bvec in cnc; // can't go 'down' with in expressions
}